fix: Improve test runner action execution, bindings parsing, and tool result checks